--- a/expansion-packs/bmad-regression-testing/templates/risk-assessment-matrix.yaml
+++ b/expansion-packs/bmad-regression-testing/templates/risk-assessment-matrix.yaml
@@ -1,23 +1,23 @@
-# Risk Assessment Matrix Template (edit per project)
+# Algorithm Output Risk Assessment Matrix
 
 criteria:
-  complexity_weight: 0.35   # code complexity and coupling
-  change_freq_weight: 0.25  # recent commit frequency
-  dependency_weight: 0.20   # number/criticality of dependencies
-  coverage_weight: 0.15     # current test coverage
-  history_weight: 0.05      # historical failures
+  file_importance_weight: 0.40   # business criticality of output files
+  data_quality_weight: 0.25     # historical data quality issues
+  change_freq_weight: 0.20       # frequency of file updates
+  size_complexity_weight: 0.10  # file size and complexity
+  baseline_availability_weight: 0.05  # availability of baseline for comparison
 
 scales:
-  complexity:    {low: 1, medium: 5, high: 9}
-  change_freq:   {low: 1, medium: 5, high: 9}
-  dependency:    {low: 1, medium: 5, high: 9}
-  coverage:      {high: 1, medium: 5, low: 9}
-  history:       {none: 1, occasional: 5, frequent: 9}
+  file_importance: {low: 1, medium: 5, high: 9}
+  data_quality:    {excellent: 1, good: 3, fair: 5, poor: 7, critical: 9}
+  change_freq:     {rare: 1, occasional: 3, frequent: 5, very_frequent: 7, constant: 9}
+  size_complexity: {small: 1, medium: 3, large: 5, very_large: 7, massive: 9}
+  baseline_availability: {available: 1, partial: 3, limited: 5, minimal: 7, none: 9}
 
 examples:
-  - component: irisx-algo:distribution_modules
-    scores: {complexity: high, change_freq: medium, dependency: high, coverage: medium, history: occasional}
-  - component: irisx-config:database_migrations
-    scores: {complexity: high, change_freq: high, dependency: medium, coverage: n/a, history: occasional}
-  - component: ms-loadapis:azure_authentication
-    scores: {complexity: medium, change_freq: medium, dependency: high, coverage: medium, history: occasional}
+  - file_type: primary_results.csv
+    scores: {file_importance: high, data_quality: good, change_freq: frequent, size_complexity: large, baseline_availability: available}
+  - file_type: debug_output.txt
+    scores: {file_importance: low, data_quality: fair, change_freq: very_frequent, size_complexity: small, baseline_availability: none}
+  - file_type: summary_report.json
+    scores: {file_importance: high, data_quality: excellent, change_freq: occasional, size_complexity: medium, baseline_availability: available}
