feat(virat): Add multi-environment support with auto-detection
- Add support for prod, reliance, and phoenix environments
- Auto-detect environment from requirement document header
- Environment-specific base branches for all 3 repositories
- Add comprehensive environment configuration documentation
- Update VIRAT agent with minimal changes
- Backward compatible with existing requirements

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
@@ -31,6 +31,30 @@ repositories:
   ms-loadapis-ril-final: "{LOADAPIS_REPO_PATH}"
   irisx-config: "{CONFIG_REPO_PATH}"
 
+# Environment-specific base branch configurations
+# VIRAT will automatically detect environment from requirement document
+environments:
+  prod:
+    name: "Production"
+    base_branches:
+      algorithm: "caas-release"
+      loadapi: "release_optimised"
+      config: "caas-staging_fix"
+  
+  reliance:
+    name: "Reliance"
+    base_branches:
+      algorithm: "master-ril"
+      loadapi: "caas-ril-uploads"
+      config: "master-ril"
+  
+  phoenix:
+    name: "Phoenix"
+    base_branches:
+      algorithm: "master-adidas-reliance-prod"
+      loadapi: "caas-phoenix-uploads"
+      config: "master-adidas-ril"
+
 # Target completion time in hours
 target_completion_time: 2
 
