feat(virat): Add multi-environment sequential processing support
- Support multiple environments in single requirement (e.g., 'reliance, phoenix')
- Process each environment sequentially through complete Phase 0-6 workflow
- Push changes after each environment completes
- Separate feature branches per environment with naming: feature/REQ-ID-desc-env
- Update all documentation with multi-environment examples
- Add comprehensive MULTI_ENVIRONMENT_SUPPORT.md guide
- Zero breaking changes - fully backward compatible
- Minimal code changes following user requirements

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
@@ -32,7 +32,8 @@ repositories:
   irisx-config: "{CONFIG_REPO_PATH}"
 
 # Environment-specific base branch configurations
-# VIRAT will automatically detect environment from requirement document
+# VIRAT will automatically detect environment(s) from requirement document
+# Supports multiple environments (comma-separated): processes each sequentially
 environments:
   prod:
     name: "Production"
