Add QC deployment agent with requirement-document-driven workflow
- Add deployment-agent.md: Complete QC deployment agent for irisx-algo, ms-loadapis-ril-final, and irisx-config
  - Phase 0: Read all deployment info from requirement document (feature branches, changed files, Args parameters, inputs, exports)
  - Phase 1: Deploy irisx-config files to Azure Storage commons/common_files/
  - Phase 2: Deploy ms-loadapis files to Azure Storage ms-loadapis/latest/
  - Phase 3: Deploy irisx-algo JAR to Azure Storage commons/jars/
  - Phase 4: Update MySQL database (jar_name, parameters, inputs, exports with backups)
  - Phase 5: Validation and smoke tests
  - Phase 6: Deployment completion
  - Phase 7: Write deployment details back to requirement document
  - Complete backup/rollback procedures for all database tables
  - Credential management via deployment-credentials.yaml or environment variables

- Update virat.md: Add deploy command (@VIRAT deploy requirement-doc.md)
  - New 'deploy' command to load deployment-agent and deploy to QC
  - New 'rollback-deployment' command
  - Added deployment section to usage examples
  - Complete integration with requirement document workflow

- Add deployment-credentials.template.yaml: Template for deployment credentials
  - Azure Storage authentication options (key/connection string/SAS token/CLI login)
  - MySQL database password configuration
  - Security notes and setup instructions

- Update .gitignore: Prevent credential file commits
  - Ignore deployment-credentials.yaml
  - Ignore deployment-backups/ and deployment-logs/ directories

Complete deployment flow:
1. VIRAT *implement updates requirement doc with implementation details
2. User runs: @VIRAT deploy requirement-doc.md
3. Deployment agent reads from requirement doc and deploys all components
4. Deployment agent writes deployment details back to requirement doc
5. Requirement doc contains complete traceability: requirement → implementation → deployment

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@ web-bundles/
 # Environment variables
 .env
 
+# Deployment credentials (NEVER commit actual credentials!)
+deployment-credentials.yaml
+**/deployment-credentials.yaml
+deployment-backups/
+deployment-logs/
+
 # System files
 .DS_Store
 Thumbs.db
