Add Azure Synapse view creation/update to deployment agent
- Add Phase 5: Azure Synapse view creation/update step
  - Detects changed view SQL files in view-creation/ folder
  - Uses viewupdate.py script from .cicd/ folder
  - Replaces placeholders ({{schema_name}}, {{child}}, {{parent}}, {{domain}})
  - Converts CREATE VIEW to CREATE OR ALTER VIEW
  - Executes views on Azure Synapse workspaces
  - Supports parent views (parent-* / domain-*) and child views
  - Reads changed view files from requirement document

- Update deployment order: [config, loadapi, algo, mysql-db, synapse-views]
  - Views deployed last as they may depend on new data structures

- Update deployment-credentials.template.yaml:
  - Add azure_synapse section with workspace, username, password, client_name
  - Add master_db connection details for viewupdate.py script

- Update Phase 8 (documentation):
  - Add Azure Synapse views updated to deployment details
  - Add view names, count, workspace, database to template

- Renumber phases: Phase 7 → Deployment Completion, Phase 8 → Update Requirement Doc

Complete deployment flow now includes:
1. irisx-config files → Azure Storage
2. ms-loadapis files → Azure Storage
3. irisx-algo JAR → Azure Storage
4. MySQL database updates (jar_name, parameters, inputs, exports)
5. Azure Synapse view creation/updates
6. Integration validation
7. Deployment completion
8. Write deployment details back to requirement document

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/deployment-credentials.template.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/deployment-credentials.template.yaml
@@ -30,6 +30,21 @@ mysql_database:
   password: "YOUR_MYSQL_PASSWORD_HERE"  # NEVER commit actual password!
   database: "master"
 
+# Azure Synapse (for view updates via viewupdate.py)
+azure_synapse:
+  workspace_name: "YOUR_SYNAPSE_WORKSPACE_NAME"  # e.g., increff-qc-workspace
+  username: "YOUR_SYNAPSE_USERNAME"
+  password: "YOUR_SYNAPSE_PASSWORD"  # NEVER commit actual password!
+  client_name: "YOUR_CLIENT_NAME"  # e.g., increff
+  
+  # Master DB connection (can reuse mysql_database credentials or specify separately)
+  master_db:
+    host: "mysql-manager-qc-02-mse.nextscm.com"
+    port: 3306
+    username: "nextscm-app-user"
+    password: "YOUR_MASTER_DB_PASSWORD_HERE"
+    database: "master"
+
 # Notification Configuration (Optional)
 notifications:
   slack:
