--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@kayvan/markdown-tree-parser": "^1.6.1",
+    "bmad-method": "^4.44.1",
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
     "comment-json": "^4.2.5",
