feat(notion-handler): Add requesting clients extraction to Notion integration
Enhanced the Notion integration by adding functionality to extract the 'requesting clients' field from Notion pages. This includes support for multiple field names to ensure flexibility in data retrieval. Updated logging to display the extracted requesting clients during the implementation workflow, improving visibility and user guidance.

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
@@ -80,6 +80,7 @@ notion:
   api_key: "{NOTION_API_KEY}"
   field_mappings:
     requirement_id: "No ID"  # Column name in Notion DB (e.g., REQ-994)
+    requesting_clients: "Requesting Client"  # Column name for requesting clients
     content_section: "Below Comments"  # Extract from page content below Comments
     push_target_section: "Below Comments"  # Push documentation to same location
   documentation_patterns:
